i broke the build making my changes. im too tired and hungry to finish, and theres still things i gotta figure out

--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="..\..\..\Utils\similarImage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CreateImageHash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
