--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="CreateImageHash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Clipboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
