--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -98,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -114,7 +114,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\myLibs\libs\debug\x64;%(AdditionalLibraryDirectories);C:\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -133,7 +133,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -153,7 +153,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\myLibs\libs\release\x64;C:\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -180,6 +180,7 @@
     <ClCompile Include="..\..\..\Utils\database.cpp" />
     <ClCompile Include="..\..\..\Utils\DatabaseControllercpp.cpp" />
     <ClCompile Include="..\..\..\Utils\MD5.cpp" />
+    <ClCompile Include="..\..\..\Utils\NetworkConnection.cpp" />
     <ClCompile Include="..\..\..\Utils\SpellChecker.cpp" />
     <ClCompile Include="..\..\..\Utils\Trie.cpp" />
     <ClCompile Include="..\..\..\Utils\Utils.cpp" />
