--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClCompile Include="..\..\..\Utils\Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Utils\NetworkConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
