--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -175,6 +175,8 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\Utils\database.h" />
     <ClInclude Include="..\..\..\Utils\DatabaseController.h" />
+    <ClInclude Include="..\..\..\Utils\LogMessage.h" />
+    <ClInclude Include="..\..\..\Utils\LogRouter.h" />
     <ClInclude Include="..\..\..\Utils\MD5.h" />
     <ClInclude Include="..\..\..\Utils\SpellChecker.h" />
     <ClInclude Include="..\..\..\Utils\Trie.h" />
@@ -186,13 +188,14 @@
     <ClInclude Include="DatabaseManager.h" />
     <ClInclude Include="DataBaseTableStructs.h" />
     <ClInclude Include="fileWalker.h" />
-    <ClInclude Include="MessageRouter.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Utils\database.cpp" />
     <ClCompile Include="..\..\..\Utils\DatabaseControllercpp.cpp" />
+    <ClCompile Include="..\..\..\Utils\LogMessage.cpp" />
+    <ClCompile Include="..\..\..\Utils\LogRouter.cpp" />
     <ClCompile Include="..\..\..\Utils\MD5.cpp" />
     <ClCompile Include="..\..\..\Utils\NetworkConnection.cpp" />
     <ClCompile Include="..\..\..\Utils\SpellChecker.cpp" />
@@ -204,7 +207,6 @@
     <ClCompile Include="DataBaseManager.cpp" />
     <ClCompile Include="DatabaseDataParser.cpp" />
     <ClCompile Include="fileWalker.cpp" />
-    <ClCompile Include="MessageRouter.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
